# ibkr-german-tax-declaration-engine

./: .gitignore  CLAUDE.md  PRD.md  README.md  input_data_spec.md  pyproject.toml  requirements.txt
reference/: Anltg_KAP_24.md  Anltg_KAP_25.md  Anltg_KAP_INV_24.md  Anltg_KAP_INV_25.md
src/: cli.py  config-default.py  config.py  config_example.py  main.py  pipeline_runner.py
src/classification/: asset_classifier.py
src/domain/: __init__.py  assets.py  enums.py  events.py  results.py
src/engine/: calculation_engine.py  fifo_manager.py  loss_offsetting.py
src/identification/: __init__.py  asset_resolver.py
src/parsers/: __init__.py  cash_transactions_parser.py  corporate_actions_parser.py  domain_event_factory.py  parsing_orchestrator.py  positions_parser.py  raw_models.py  trades_parser.py
src/processing/: enrichment.py  option_trade_linker.py  withholding_tax_linker.py
src/reporting/: console_reporter.py  diagnostic_reports.py  pdf_generator.py  reporting_utils.py
src/utils/: __init__.py  currency_converter.py  exchange_rate_provider.py  sorting_utils.py  tax_utils.py  type_utils.py
tests/: _test_helpers.py  conftest.py  test_dividend_handling.py  test_fifo_groups.py  test_group6_loss_offsetting.py  test_mock_providers.py  test_options_lifecycle.py  test_precision.py  test_spec_fifo.md  test_withholding_tax_linker.py
tests/docs/: LEGAL_VALIDATION_REPORT_1Q25.md  OPTIONS_TESTS_FIX.md  OPTIONS_TEST_PLAN.md  TEST_COVERAGE_GAP_ANALYSIS.md  YAML_FRAMEWORK_ANALYSIS.md
tests/fifo_scenarios/: test_case_base.py  test_dividend_handling.py  (+3 more)
(+28 files in other folders)
